@@ -148,6 +148,7 @@ Chronological list of authors
   - William Glass
   - Marcello Sega
   - Edis Jakupovic
+  - Nicholas Craven
 
 External code
 -------------
